[project]
name = "torchless"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["game-state>=2.0.3", "pygame-ce>=2.5.6"]

[dependency-groups]
dev = ["basedpyright>=1.32.1", "ruff>=0.14.3"]

[tool.ruff]
line-length = 79
lint.extend-select = ["ANN", "I"]
lint.ignore = ["ANN401"]
lint.fixable = ["I", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 72

[tool.basedpyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "venv/",
    "build/",
    "dist/",
    "local/",
    "examples/",
    "docs/",
    "lib_testing/",
]
reportImportCycles = false
reportUnnecessaryIsInstance = false
reportImplicitStringConcatenation = false
reportUnusedCallResult = false
reportMissingTypeStubs = false
reportAny = false
reportExplicitAny = false
reportImplicitOverride = false
reportDeprecated = false
